lib/type/static/testdata/valid/self_no_warn.lua
local M = {}
function M:method(x)
  return x:upper()
end
