lib/type/static/testdata/errors/implicit_any_param.lua
local function wrap(x)
  return x
end
